; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_io.c_buf_io_read.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_io.c_buf_io_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf_io_priv = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 (i32, i32, i32*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @buf_io_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_io_read(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.buf_io_priv*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call %struct.buf_io_priv* @get_priv_io(i32* %8)
  store %struct.buf_io_priv* %9, %struct.buf_io_priv** %7, align 8
  %10 = load %struct.buf_io_priv*, %struct.buf_io_priv** %7, align 8
  %11 = getelementptr inbounds %struct.buf_io_priv, %struct.buf_io_priv* %10, i32 0, i32 1
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32 (i32, i32, i32*, i32)*, i32 (i32, i32, i32*, i32)** %13, align 8
  %15 = load %struct.buf_io_priv*, %struct.buf_io_priv** %7, align 8
  %16 = getelementptr inbounds %struct.buf_io_priv, %struct.buf_io_priv* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.buf_io_priv*, %struct.buf_io_priv** %7, align 8
  %21 = getelementptr inbounds %struct.buf_io_priv, %struct.buf_io_priv* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32 %14(i32 %19, i32 %22, i32* %23, i32 %24)
  ret i32 %25
}

declare dso_local %struct.buf_io_priv* @get_priv_io(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
